# test_tnn

./: CMakeLists.txt
tnn-master-2022-11-25/lib/: libinference_engine.dylib  libinference_engine_legacy.dylib  libinference_engine_lp_transformations.dylib  libinference_engine_transformations.dylib
yolov6/: yolov6.cpp  yolov6n.opt.tnnproto
